Fixed uneven boxes in services page. Need to fix pictures

--- a/src/components/julioj/julioCSS/ServicesJulioJimenez.css
+++ b/src/components/julioj/julioCSS/ServicesJulioJimenez.css
@@ -1,32 +1,21 @@
 
-.serviceBannerWrapper {
-  padding: 15px;
+.leftSide, .rightSide {
+  padding: 10px;
   background-color: rgba(43, 31, 31, 0.486);
-  margin-top: 3rem;
-  margin-right: 6rem;
+  margin-top: 3em;
   
   }
-.bannerGrid {
-    /*Problem, needs two columns per row at least for phones, looks bad on huge screens*/
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-    margin-left: 10rem;
-    gap: 5%; 
-    /*
-    Problem: the containers are clickable outside their boxes
-    display: grid;
-    margin-left: 10rem;
-    margin-top: 3rem;
-    grid-template-columns: repeat(2, 2fr);
-    gap: 2rem;
-    justify-content: center;
-    min-width: 25rem;
-    */
+
+.servicesList{
+  display: flex;
+  justify-content: center;
+  gap: 6%;
+}
+.servicesList > li{
+  list-style: none;
 }
 
 a{
     text-decoration: none;
-    
 }
+
